# stk

./: .autotools  .cproject  .project  CMakeLists.txt  Makefile.in  configure  configure.ac
build-arm_release/projects/examples/: libMakefile
cmake/: arm-linux-toolchain.cmake
include/: Blit.h  BlitSaw.h  BlitSquare.h  BowTable.h  Cubic.h  Effect.h  Filter.h  Guitar.h  LentPitShift.h  Noise.h  PipeReceiver.h  PitShift.h  Shakers.h  Sitar.h  Stk.h  Vector3D.h
rawwaves/: makewavs.c  sine.c
src/: Asymp.cpp  BandedWG.cpp  BiQuad.cpp  Blit.cpp  BlitSaw.cpp  BlitSquare.cpp  BlowHole.cpp  Brass.cpp  Drummer.cpp  FileLoop.cpp  FileRead.cpp  FileWrite.cpp  FileWvIn.cpp  Fir.cpp  FormSwep.cpp  FreeVerb.cpp  Granulate.cpp  Guitar.cpp  JCRev.cpp  Makefile.in  ModalBar.cpp  NRev.cpp  OnePole.cpp  OneZero.cpp  PRCRev.cpp  PipeReceiver.cpp  PitShift.cpp  PoleZero.cpp  RtAudio.cpp  Shakers.cpp  SineWave.cpp  Sphere.cpp  StifKarp.cpp  Stk.cpp  TwoPole.cpp  TwoZero.cpp  VoicForm.cpp  Voicer.cpp  Whistle.cpp
